--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+      /*@font-face {
+        font-family: superchips;
+        src: url(superchips.ttf);
+      }
+
+      h1 {
+        font-family: superchips;
+      }*/
+
+      body {
+        background-color: #27abbf;
+      }
+    </style>
+    
     <meta name="p:domain_verify" content="d16c709cdcc58ac804ce4f99af79de20"/>
     
     <meta charset="UTF-8">
@@ -20,8 +35,10 @@
     <link rel="icon" href="/img/educ8tive-studio-small.jpg" type="image/jpeg">
     <link rel="apple-touch-icon" href="/img/educ8tive-studio-small.jpg">
 </head>
-<body>
-<img src="img/Educ8tive Studio [A4 Banner].png" width="100%">
-<h1>Redirecting...</h1>
-</body>
+  <body>
+    <img src="img/Educ8tive Studio [A4 Banner].png"width="100%"/>
+    <h1 style="-webkit-text-stroke: 2px black; text-align: center; color: white">
+      Redirecting...
+    </h1>
+  </body>
 </html>
