--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@ pintrk('page');
 <img height="1" width="1" style="display:none;" alt=""
   src="https://ct.pinterest.com/v3/?event=init&tid=2612857150215&pd[em]=<hashed_email_address>&noscript=1" />
 </noscript>
+      <script>
+pintrk('track', 'pagevisit');
+</script>
 <!-- end Pinterest Tag -->
 
 
