--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <link rel="apple-touch-icon" href="/img/educ8tive-studio-small.jpg">
 </head>
   <body>
-    <img src="img/Educ8tive Studio [A4 Banner].png"width="100%"/>
+    <img src="img/brand/Educ8tive Studio Banner.png"width="100%"/>
     <h1 style="-webkit-text-stroke: 3px #002646; text-align: center; color: white">
       Redirecting...
     </h1>
